2003-01-15  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-commands.c (gedit_cmd_help_about): updated about 
	box

	* dialogs/gedit-preferences-dialog.c (gedit_preferences_dialog_init)
	(gedit_preferences_dialog_finalize)
	(gedit_preferences_dialog_setup_font_and_)
	(gedit_preferences_dialog_setup_print_fon): fixed mem leaks

2003-01-14  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-document.c (gedit_document_finalize):
	free document->priv->encoding
	(gedit_document_save_as_real): don't leak chars and
	bak_ext

	* gedit-output-window.c: don't leak tooltips

2003-01-09  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-view.c (gedit_view_key_press_cb): call 
	gedit_prefs_manager_get_auto_indent and
	gedit_prefs_manager_get_insert_spaces only when needed.
	Return FALSE if the event is not managed 
	(this fixes bug #102619).

2003-01-10  James Willcox  <jwillcox@gnome.org>

	Updated to latest recent-files code (fixes memory leak)

2003-01-06  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-view.c (gedit_view_doc_changed_handler):
	  check if w != NULL;

2003-01-05  James Willcox  <jwillcox@gnome.org>

	* gedit-mdi-child.c: (set_tab_icon):  Adapt to API change
	* recent-files/*:  Update to latest from libegg

	Fix icon sizes for recent-files menus and document tabs.

2003-01-04  James Willcox  <jwillcox@gnome.org>

	* recent-files/Makefile.am:
	* recent-files/egg-recent-item.c: (egg_recent_item_set_uri),
	(egg_recent_item_get_uri_for_display):
	* recent-files/egg-recent-model.c: (egg_recent_model_update_item),
	(egg_recent_model_filter):
	* recent-files/egg-recent-view-bonobo.c:
	(egg_recent_view_bonobo_set_model), (egg_recent_view_bonobo_init):
	* recent-files/egg-recent-view-gtk.c:
	(egg_recent_view_gtk_set_model), (egg_recent_view_gtk_init):

	Update to latest recent-files stuff in libegg.  This fixes a crasher
	bug.

2003-01-03  James Willcox  <jwillcox@gnome.org>

	* gedit2.c: (gedit_handle_automation_cmdline):

	Tell the startup-notification stuff that we are all done.