@@ -1,3 +1,9 @@
+2003-01-21  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* diff/diff.c (diff_execute): use g_shell_quote, 
+	use gnome_vfs_get_uri_from_local_path instead of eel_make_uri_canonical,
+	remove dead code.
+
 2003-01-15  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* sample/sample.c (init): removed dead code
