@@ -1,3 +1,8 @@
+2003-01-21  Paolo Maggi <paolo.maggi@polito.it>
+
+	* dialogs/gedit-dialog-goto-line.c (dialog_goto_line_get_dialog):
+	don't pass dialog when connecting "insert_text"
+
 2003-01-15  Paolo Maggi <paolo.maggi@polito.it>
 
 	* gedit-commands.c (gedit_cmd_help_about): updated about 
